# pyCArchive

./: README.md  license  pyproject.toml
pycarchive/: core.py
tests/: test_pycarchive.py
